Fixed line height for headings that was cutting off type

--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ p {
 }
 
 .cd-headline.clip {
-    line-height: 0.6em;
+    line-height: 0.75em;
 }
 
 .cd-words-wrapper {
